--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@
     .project-card img {
       width: 100%;
       height: 10rem;
-      object-fit: cover;
+      object-fit: fill;
     }
     .project-card h3 {
       margin: 1.25rem;
